@@ -1,5 +1,14 @@
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
+	* log_repaint.c: (logview_unbold_rows),
+	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
+	(log_fill_model_no_date), (log_fill_model_date),
+	(logview_create_model), (log_repaint):
+	* logview.c: (logview_init): For kicks, bold the new lines for 5
+	seconds when a log is updated.
+
+2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
+
 	* log_repaint.c: (logview_update_version_bar),
 	(logview_add_new_log_lines), (log_repaint):
 	* logrtns.c: (log_open), (log_add_lines), (log_read_new_lines):
